# automat-na-teple-napoje

./: 1. Automat na teplé nápoje v C++ (info).docx  1_napoj.cpp  1_napoj.h  2_TypNapoja.cpp  3_automat.cpp  3_automat.h  4_vyroba.cpp  5_mincovka.cpp  CMakeLists.txt  README.md  testyUloha_1.cpp  testyUloha_2.cpp  testyUloha_3.cpp  testyUloha_4.cpp  testyUloha_5.cpp
